--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
     <title> Warsztaty leaflet</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+     crossorigin=""/>
+
+     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+     crossorigin=""></script>
+
+     <script src="dane/parki_2.geojson"></script>
+     <script src="dane/kawiarnie.geojson"></script>
 </head>
 
 <body>
+<div id = "title"><h2>Mapa warsztatowa</h2></div>
+<div id = 'container'> 
+    <h2>Mapa warsztatów</h2>
+    <iframe width = 400px height = 600px src = "dane/mapa_R.html"></iframe>
+</div>
 
+<div id="map"></div>
 </body>
 <script src="script.js"></script>
 </html>
