--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name = "keywords" content = ""/>
     <title> Warsztaty leaflet</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+
+    <!--podłączenie skryptów ze stylem i kodem biblioteki leaflet w sekcji head-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"      
      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
      crossorigin=""/>
 
@@ -16,14 +17,15 @@
      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
      crossorigin=""></script>
 
-     <script src="dane/parki_2.geojson"></script>
+    <!-- podłączenie warstw wektorowych z kawiarniami i parkami-->
+     <script src="dane/parki_2.geojson"></script>       
      <script src="dane/kawiarnie.geojson"></script>
 </head>
 
 <body>
 <div id = "title"><h2>Mapa warsztatowa</h2></div>
 <div id = 'container'> 
-    <h2>Mapa warsztatów</h2>
+    <h2>Mapa w R</h2>
     <iframe width = 400px height = 600px src = "dane/mapa_R.html"></iframe>
 </div>
 
