--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      crossorigin=""></script>
 
     <!-- podłączenie warstw wektorowych z kawiarniami i parkami-->
-     <script src="dane/parki_2.geojson"></script>       
+     <script src="dane/parki.geojson"></script>       
      <script src="dane/kawiarnie.geojson"></script>
 </head>
 
